--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,19 +3,19 @@ name = "giggityflix-peer"
 version = "0.1.0"
 description = "Peer service for Giggityflix media streaming platform"
 readme = "README.md"
-packages = [{include = "src"}]
+packages = [{ include = "giggityflix_peer", from = "src" }]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-giggityflix-grpc-peer = {path = "../giggityflix-grpc-peer", develop = true}
+giggityflix-grpc-peer = { path = "../giggityflix-grpc-peer", develop = true }
 grpcio = "^1.71.0"
 aiohttp = "^3.9.1"
 aiosqlite = "^0.19.0"
-pydantic = "^2.7.1"
+pydantic = "^2.11.4"
 aiortc = "^1.5.0"
 watchdog = "^3.0.0"
 colorlog = "^6.7.0"
-typer = {extras = ["all"], version = "^0.9.0"}
+typer = { extras = ["all"], version = "^0.9.0" }
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
