--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,13 @@ pydantic = "^2.11.4"
 aiortc = "^1.5.0"
 watchdog = "^3.0.0"
 colorlog = "^6.7.0"
+opencv-python = "^4.11.0.86"
 typer = { extras = ["all"], version = "^0.9.0" }
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
 pytest-asyncio = "^0.23.5.post1"
+pytest-mock = "^3.14.0"
 pytest-cov = "^4.1.0"
 black = "^24.3.0"
 flake8 = "^7.0.0"
